# big-shout

./: .gitignore  README.md  SETUP.md
cranker/: .env.example  package-lock.json  package.json  tsconfig.json
cranker/src/: activate.ts  bots.ts  cards.ts  chain.ts  config.ts  db.ts  engine.ts  index.ts  init-config.ts  odds.ts  proof.ts  replay.ts  scores.ts  txline.ts
docs/: demo-video.md  technical-documentation.md  txline-api-feedback.md
ops/: README.md  bigshout-bots.service  bigshout-cranker.service  com.bigshout.bots.plist  com.bigshout.cranker.plist  run-bots.sh  run-cranker.sh
program/: Anchor.toml  Cargo.toml
program/programs/bigshout/: Cargo.toml
program/programs/bigshout/src/: constants.rs  error.rs  instructions.rs  lib.rs  state.rs
program/programs/bigshout/src/instructions/: claim.rs  create_market.rs  init_config.rs  predict.rs  settle_expired.rs  settle_proven.rs  update_odds.rs
program/programs/bigshout/tests/: bigshout_test.rs
program/programs/bigshout/tests/fixtures/: daily_root_20649.json  real_proof.json  real_proof_2keys.json
web/: package-lock.json  package.json
web/prisma/: schema.prisma
web/scripts/: seed-users.ts
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/auth/: page.tsx
web/src/app/feed/: page.tsx
web/src/app/leaderboard/: page.tsx
web/src/components/: ActiveRooms.tsx  ConsensusBar.tsx  GuestBanner.tsx  Header.tsx  PressureMeter.tsx  ReceiptCard.tsx  ScoreBar.tsx  SwipeCard.tsx  Ticker.tsx
web/src/lib/: chain.ts  client.ts  config.ts  json.ts  meta.ts  session.ts  txline.ts  walletcrypto.ts
(+26 files in other folders)
