[workspace]
members = [
    "programs/*"
]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.89.0"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
opt-level = "z"
strip = true
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
